NN-576 Validation fix on case note search date range    - Applied full width to calendars on mobile

--- a/app/containers/Bookings/Details/AddAppointment/index.scss
+++ b/app/containers/Bookings/Details/AddAppointment/index.scss
@@ -20,7 +20,11 @@
   }
 
   .rdtPicker {
-    width: 350px !important;
+    width: 350px;
+
+    @include media-breakpoint-down(xs) {
+      width: 100%;
+    }
   }
 
   .col-xs-6 {
